Try to stop name from being squished on mobile. Try stacking sun requirements

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -77,6 +77,10 @@ html table .scientific_name {
     margin: 5px 10px 0 0;
 }
 
+.plant_table td.name {
+    min-width: 200px
+}
+
 .plant_filters .filter_input {
     float: left;
     margin-right: 15px;
@@ -119,7 +123,7 @@ html table .scientific_name {
 }
 
 .sun_req div.visible {
-  display: inline-block;
+  display: block;
 }
 
 .sun_req .full_sun {
@@ -127,7 +131,7 @@ html table .scientific_name {
 }
 
 .sun_req .part_shade {
-  background-image: linear-gradient(45deg, gray ,yellow);
+  background-image: linear-gradient(0deg, gray ,yellow);
 }
 
 .sun_req .full_shade {
